src/other/mico-2.3.12/test/idl/error/expected-stderr-case15.idl
case15.idl:14: scoped name 'z' not defined
